fix: wrap links on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -200,7 +200,8 @@ nav {
   height: 100vh;
   position: absolute;
   top: 200vh;
-  gap: 50px;
+  gap: 16px 50px;
+  padding: 0 2rem;
 
   & a {
     display: flex;
@@ -209,8 +210,16 @@ nav {
     color: var(--color-black);
     text-decoration: none;
     font-weight: 500;
+
     &:hover {
       text-decoration: underline;
     }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .contact-container {
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
